# quant-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  dvc.yaml  mkdocs.yml  pyproject.toml
.codex/: README.md  hooks.example.json
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md
docs/: agent-workflows.md  index.md  promotion-gates.md  proprietary-notice.md  publication-policy.md  scientific-method.md  vscode-setup.md
experiments/: registry.yaml
scripts/: analyze_core_metals_carry_conditioned_fair_value.py  analyze_core_metals_hourly_autoregression.py  analyze_core_metals_pc12_residual_after_carry.py  analyze_metals_carry_change_forward_returns.py  analyze_metals_convenience_yield_mechanism.py  analyze_metals_funding_predictiveness.py  analyze_metals_funding_vs_realized_returns.py  backtest_core_metals_fair_value_dislocations.py  backtest_core_metals_fair_value_selected_sides.py  backtest_core_metals_hf_dislocation_timing.py  backtest_core_metals_hf_walkforward_execution.py  bootstrap.sh  build_wiki.py  calc_metals_rates_usd_beta.py  check.sh  compute_pairs_significance.py  eda_databento_glbx_representative.py  generate_core_metals_5m_log_returns.py  model_metals_hourly_funding.py  new_experiment.py  plot_core_metals_5m_cum_log_returns.py  plot_core_metals_equal_weight_benchmark.py  plot_core_metals_fair_value_periods.py  plot_core_metals_inverse_vol_benchmark.py  plot_core_metals_pairwise_covariance.py  plot_core_metals_pc12_residual_carry.py  plot_core_metals_pca_residual3_correlations.py  plot_core_metals_pca_residual_correlations.py  plot_core_metals_pca_residual_cum_log_returns.py  plot_metals_5m_carry_timeseries.py  plot_metals_funding_signal_vs_forward_return.py  plot_metals_md_top_dislocations.py  plot_metals_usd_beta_hedged_vol_adjusted_returns.py  pull_full_metals_1m_10y.py  pull_full_metals_trades_12m.py  pull_metals_mbp1_30d.py  run_core_metals_correlation_aware_benchmark.py  run_core_metals_drawdown_control_overlays.py  run_core_metals_long_short_overlay_benchmark.py  (+23 more)
(+691 files in other folders)
