[project]
name = "quant-lab"
version = "0.1.0"
description = "Agent-assisted quantitative research lab with reproducible experiments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "databento>=0.80.0",
    "duckdb>=1.2.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.17.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=1.20.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
data-versioning = [
    "dvc>=3.58.0",
]
docs = [
    "mkdocs>=1.6.0",
]
notebooks = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "jupytext>=1.16.0",
    "nbformat>=5.10.0",
]
research = [
    "numba>=0.60.0",
    "pandera>=0.20.0",
    "plotly>=5.24.0",
    "seaborn>=0.13.0",
]
workflow = [
    "prefect>=3.0.0",
]

[project.scripts]
quantlab = "quantlab.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantlab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PL",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "PLR0913",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "data", "mlruns", "reports"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "-q --cov=quantlab --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/quantlab"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
